Updated all links to correct paths.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Cheerful Cup</title>
-    <link rel="stylesheet" href="index.css"/>
+    <link rel="stylesheet" href="styles.css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +19,7 @@
             <!---->
             <nav class="navbar navbar-expand-lg navbar-background">
                 <div class="container-fluid">
-                    <img src="/images/ACC logo.jpg" alt="A Cheerful Cup Logo" class="acc-logo">
+                    <img src="Assets/ACC logo.jpg" alt="A Cheerful Cup Logo" class="acc-logo">
                     <p class="brand m-1">A Cheerful Cup</p>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -354,7 +354,7 @@
             <div class="container p-4 align-items-center d-flex cater-content-container" id="cater">
                 <!--Cater img container-->
                 <div class="container">
-                    <img src="/images/Mom catering.jpg" alt="Ceo catering coffee locally" class="cater-img img-fluid">
+                    <img src="Assets/Mom catering.jpg" alt="Ceo catering coffee locally" class="cater-img img-fluid">
                 </div>
                 <div class="container-fluid p-5">
                     <h3 class="cater-title">Need a coffee catering event?</h3>
