Review buttons now opens up a seprate tab in the same browser.

--- a/index.html
+++ b/index.html
@@ -339,8 +339,8 @@
                     </div>
                     <div class="container review-btn-container mt-3" id="contact">
                         <h3 class="leave-review-slogan">What did you think of your experience?</h3>
-                        <button class="google-review-btn"><a href="https://www.google.com/search?sca_esv=42f97cfd63395683&sxsrf=AE3TifOhwLCuddXVAlzHU-DEYeNtGkF3Dw:1752809882341&si=AMgyJEtREmoPL4P1I5IDCfuA8gybfVI2d5Uj7QMwYCZHKDZ-E_70VPGvoStT9577jIP-4_j7m6hV8kEIp_zBYtB7aqbWR5TxxsTLjZsSipPfmsjfQK6n-rGhbvhW32q6yAtgBrAEQar7&q=A+cheerful+Cup+Reviews&sa=X&ved=2ahUKEwi-gpXTvcWOAxWTHNAFHegQMPQQ0bkNegQIJRAE&biw=1912&bih=954&dpr=1#lrd=0x876c7f0bdbd727b5:0xd4eadbdad48a8d99,3,,,,">Leave a Google Review</a></button>
-                        <button class="yelp-review-btn"><a href="https://www.yelp.com/writeareview/biz/AtOFMCEF93ywMdQbNuzOIQ?return_url=%2Fbiz%2FAtOFMCEF93ywMdQbNuzOIQ&review_origin=biz-details-war-button">Leave a Yelp Review</a></button>
+                        <button class="google-review-btn"><a href="https://www.google.com/search?sca_esv=42f97cfd63395683&sxsrf=AE3TifOhwLCuddXVAlzHU-DEYeNtGkF3Dw:1752809882341&si=AMgyJEtREmoPL4P1I5IDCfuA8gybfVI2d5Uj7QMwYCZHKDZ-E_70VPGvoStT9577jIP-4_j7m6hV8kEIp_zBYtB7aqbWR5TxxsTLjZsSipPfmsjfQK6n-rGhbvhW32q6yAtgBrAEQar7&q=A+cheerful+Cup+Reviews&sa=X&ved=2ahUKEwi-gpXTvcWOAxWTHNAFHegQMPQQ0bkNegQIJRAE&biw=1912&bih=954&dpr=1#lrd=0x876c7f0bdbd727b5:0xd4eadbdad48a8d99,3,,,," target="_blank">Leave a Google Review</a></button>
+                        <button class="yelp-review-btn"><a href="https://www.yelp.com/writeareview/biz/AtOFMCEF93ywMdQbNuzOIQ?return_url=%2Fbiz%2FAtOFMCEF93ywMdQbNuzOIQ&review_origin=biz-details-war-button" target="_blank">Leave a Yelp Review</a></button>
                     </div>
                 </div>
             </div>
