Corrected footer logo path

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Agu+Display&family=Bitcount+Prop+Single:wght@100..900&family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Indie+Flower&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Stint+Ultra+Condensed&display=swap" rel="stylesheet">
 </head>
-<body onload="loadError()">
+<body>
     <!-- Header Navigation Bar -->
     <header>
         <div class="container-fluid">
@@ -388,7 +388,7 @@
             <!--Footer content-->
             <div class="container-fluid footer-content-container">
                 <div class="container p-3">
-                    <img src="/images/ACC logo.jpg" alt="ACC Logo" class="img-fluid footer-img">
+                    <img src="/Assets/ACC logo.jpg alt="ACC Logo" class="img-fluid footer-img">
                 </div>
                 <!--Footer content text-->
                 <div class="container">
