--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
             <!--Footer content-->
             <div class="container-fluid footer-content-container">
                 <div class="container p-3">
-                    <img src="/Assets/ACC logo.jpg alt="ACC Logo" class="img-fluid footer-img">
+                    <img src="/Assets/ACC logo.jpg" alt="ACC Logo" class="img-fluid footer-img">
                 </div>
                 <!--Footer content text-->
                 <div class="container">
